--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,43 @@ p{
     transform: scale(1.2);
     transition: 0.5s;
 }
+@media (max-width: 900px){
+    .main_card{
+        width: 80%;
+        
+    }
+}
+@media (max-width: 820px){
+    .main_card{
+        width: 95%;   
+    }
+}
+@media (max-width: 590px){
+    .main_card{
+         width: 95%;
+         flex-direction: column;
+         margin: 20px auto 0 20px;
+    }
+    .car_card{
+        width: 95%;
+    }
+    .container{
+        display: flex;
+        align-items: unset;
+        justify-content: unset;
+        background: #F2F2F2; 
+    }
+    .sedans{
+        border-radius: 8px 8px 0 0;
+    }
+    .luxury{
+        border-radius: 0 0 8px 8px;
+    }
+    p{
+        margin: 25px 47px 0 36px;
+        width: 70%;
+    }
+    .learn_more{
+        margin: 25px 0 48px 36px;
+    }
+}
